{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 82,
  "lineage": "b99a4cb5-acff-5c09-47d2-915cae13d530",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:271153858532:loadbalancer/app/user03-alb1/077b60bc74f12b0d",
            "arn_suffix": "app/user03-alb1/077b60bc74f12b0d",
            "dns_name": "user03-alb1-159889845.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:271153858532:loadbalancer/app/user03-alb1/077b60bc74f12b0d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "user03-alb1",
            "security_groups": [
              "sg-0a26f8e49e971d5a1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-065c4a4dea21a5220"
              },
              {
                "subnet_id": "subnet-0d9f82fc0a4feb1a4"
              }
            ],
            "subnets": [
              "subnet-065c4a4dea21a5220",
              "subnet-0d9f82fc0a4feb1a4"
            ],
            "tags": {
              "Name": "user03-ALB1"
            },
            "vpc_id": "vpc-03ccde535828f42fd",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.sg1_ec2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb1-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:271153858532:listener/app/user03-alb1/077b60bc74f12b0d/c95cb000c2b97aaf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:271153858532:targetgroup/user03-tg1/5faa77fd3476cfd3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:271153858532:listener/app/user03-alb1/077b60bc74f12b0d/c95cb000c2b97aaf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:271153858532:loadbalancer/app/user03-alb1/077b60bc74f12b0d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb1",
            "aws_alb_target_group.tg1",
            "aws_security_group.sg1_ec2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:271153858532:targetgroup/user03-tg1/5faa77fd3476cfd3",
            "arn_suffix": "targetgroup/user03-tg1/5faa77fd3476cfd3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:271153858532:targetgroup/user03-tg1/5faa77fd3476cfd3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "user03-tg1",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "user03-tg1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-03ccde535828f42fd"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "sg1_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271153858532:security-group/sg-028eab4640f623c49",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028eab4640f623c49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "owner_id": "271153858532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user03-sg1_default"
            },
            "vpc_id": "vpc-03ccde535828f42fd"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271153858532:internet-gateway/igw-058a7004416ed0293",
            "id": "igw-058a7004416ed0293",
            "owner_id": "271153858532",
            "tags": {
              "Name": "user03-igw1"
            },
            "vpc_id": "vpc-03ccde535828f42fd"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e9d4405ce54d0cdc",
            "owner_id": "271153858532",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058a7004416ed0293",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "user03-rt1"
            },
            "vpc_id": "vpc-03ccde535828f42fd"
          },
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a758051bb37f9b30",
            "route_table_id": "rtb-0e9d4405ce54d0cdc",
            "subnet_id": "subnet-065c4a4dea21a5220"
          },
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_route_table.rt1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7b7ad7bea9b44b1",
            "route_table_id": "rtb-0e9d4405ce54d0cdc",
            "subnet_id": "subnet-0d9f82fc0a4feb1a4"
          },
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_route_table.rt1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271153858532:security-group/sg-0a26f8e49e971d5a1",
            "description": "Allow HTTP/SSH inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a26f8e49e971d5a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "54.151.70.195/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "271153858532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP/SSH Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ccde535828f42fd"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271153858532:subnet/subnet-065c4a4dea21a5220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.3.1.0/24",
            "id": "subnet-065c4a4dea21a5220",
            "map_public_ip_on_launch": false,
            "owner_id": "271153858532",
            "tags": {
              "Name": "user03-subnet1"
            },
            "vpc_id": "vpc-03ccde535828f42fd"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271153858532:subnet/subnet-0d9f82fc0a4feb1a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.3.2.0/24",
            "id": "subnet-0d9f82fc0a4feb1a4",
            "map_public_ip_on_launch": false,
            "owner_id": "271153858532",
            "tags": {
              "Name": "user03-subnet2"
            },
            "vpc_id": "vpc-03ccde535828f42fd"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:271153858532:vpc/vpc-03ccde535828f42fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-01d7f0f59bcb7901d",
            "default_route_table_id": "rtb-000457608704c560a",
            "default_security_group_id": "sg-028eab4640f623c49",
            "dhcp_options_id": "dopt-0c5be818f7a2a9729",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03ccde535828f42fd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-000457608704c560a",
            "owner_id": "271153858532",
            "tags": {
              "Name": "user03-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}